updated image and files

--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 
 <head>
-    <title>student bio page</title>
+    <title>jason farthing portfolio site</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <h1>Student Bio</h1>
-    </header>
 
-    <div class="container">
-        <section id="main-bio">
-            <h2>Jason Farthing</h2>
-            <img id="bio-image" src="assets/jasonheadshot200px.jpg" alt="Jason Farthing">
-        
-            <p id="bio-info">I studied
-                <strong>Graphic Design</strong> and
-                <strong>Drawing</strong> at Colorado State University.
-                <br>I am working as a
-                <strong>Front End Web Designer</strong> and concurrently studying
-                <strong>Full Stack Web Development</strong> to expand my
-                knowledge of web design to be the best designer/developer that I can be.
-            </p>
-        </section>
+    <div class="siteheader">
+        <h1>Jason Farthing</h1>
+        <a href="#">About Me |</a>
+        <a href="#"> Contact |</a>
+        <a href="#"> Portfolio</a>
 
-        <section id="contact-info">
-            <h2 class="contact-title">Contact Info</h2>
-            <ul>
-                <li>
-                    <strong>Email: </strong>
-                    <a href="mailto:jasonfarthingisnow@gmail.com">jasonfarthingisnow@gmail.com</a>
-                </li>
-                <li>
-                    <strong>Git Hub: </strong>
-                    <a href="https://github.com/jasonfarthing" ; target="blank" ;>Jason Farthing</a>
-                </li>
-                <li>
-                    <strong>Stack Overflow: </strong>
-                    <a href="https://stackoverflow.com/users/8760150/jasonfarthing" ; target="blank"
-                        ;>Jason Farthing</a>
-                </li>
-            </ul>
-        </section>
     </div>
 
+    <div class="about">
+
+        <h2>About Me</h2>
+        <img id="bio-image" src="assets/jasonheadshot200px.jpg" alt="Jason Farthing">
+
+        <p>I studied Graphic Design and Drawing at Colorado State University. I am working as a Front End Web Designer and concurrently
+            studying Full Stack Web Development to expand my knowledge of web design to be the best designer/developer that
+            I can be.
+        </p>
+    </div>
+
+    <div class="connect">
+        <h2>Let's Connect</h2>
+        <a href="https://github.com/jasonfarthing" ; target="blank">
+            <img id="github" src="#" alt="git hub logo">
+        </a>
+        <a href="https://stackoverflow.com/users/8760150/jasonfarthing" ; target="blank">
+            <img id="linkedin" src="#" alt="linked in logo">
+        </a>
+        <a href="https://stackoverflow.com/users/8760150/jasonfarthing" ; target="blank">
+            <img id="stack" src="#" alt="stack overflow logo">
+        </a>
+
+    </div>
+
+
+    <div class="pagefooter">
+        <p>Contact information:
+            <a href="mailto:jasonfarthingisnow@gmail.com">jasonfarthingisnow@gmail.com</a>
+        </p>
+    </div>
 
 </body>
