--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>jason farthing portfolio site</title>
     <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="JF WEB DESIGN BUSINESS/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
@@ -13,9 +16,9 @@
         </div>
 
         <div class="topnav">
-            <a href="#index">About</a>
-            <a href="#portfolio"> Portfolio</a>
-            <a href="#contact"> Contact</a>
+            <a class="about-nav" href="#index">About</a>
+            <a class="portfolio-nav" href="#portfolio"> Portfolio</a>
+            <a class="contact-nav" href="#contact"> Contact</a>
         </div>
     </div>
 
@@ -34,7 +37,8 @@
     <div id="connect">
         <h2>Let's Connect</h2>
         <a href="https://github.com/jasonfarthing" ; target="blank">
-            <img id="github" src="#" alt="git hub logo">
+            <img id="github" src="http://www.iconsdb.com/white-icons/github-6-icon.html"
+                alt="git hub logo" width="50">
         </a>
         <a href="https://stackoverflow.com/users/8760150/jasonfarthing" ; target="blank">
             <img id="linkedin" src="#" alt="linked in logo">
