contact page, updated final look

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
 
         <div class="topnav">
-            <a class="about-nav" href="#index">About</a>
-            <a class="portfolio-nav" href="#portfolio"> Portfolio</a>
-            <a class="contact-nav" href="#contact"> Contact</a>
+            <a id="about-nav" href="index.html">About</a>
+            <a id="portfolio-nav" href="portfolio.html"> Portfolio</a>
+            <a id="contact-nav" href="contact.html"> Contact</a>
         </div>
     </div>
 
@@ -31,27 +31,35 @@
         <p id="bio-text">I studied Graphic Design and Drawing at Colorado State University. I am working as a Front End Web Designer and concurrently
             studying Full Stack Web Development to expand my knowledge of web design to be the best designer/developer that
             I can be.
+            <br>
+            <br>I make and play cigar box guitars in my band,
+            <a href="http://thebudrows.com" target="blank">
+                <strong>The Budrows</strong>
+            </a>.
+            <br>
+            <br>I love hiking and backpacking and nothing beats a cold beer with good friends.
         </p>
     </div>
 
     <div id="connect">
-        <h2>Let's Connect</h2>
-        <a href="https://github.com/jasonfarthing" ; target="blank">
-            <img id="github" src="http://www.iconsdb.com/white-icons/github-6-icon.html"
-                alt="git hub logo" width="50">
-        </a>
-        <a href="https://stackoverflow.com/users/8760150/jasonfarthing" ; target="blank">
-            <img id="linkedin" src="#" alt="linked in logo">
-        </a>
-        <a href="https://stackoverflow.com/users/8760150/jasonfarthing" ; target="blank">
-            <img id="stack" src="#" alt="stack overflow logo">
-        </a>
+        <h2 class="connect-h1">Let's Connect</h2>
+        <div class="icons">
+            <a href="https://github.com/jasonfarthing" ; target="blank">
+                <img id="github" src="../jasonfarthing.github.io/assets/images/githublogo.jpg" alt="git hub logo" width="50">
+            </a>
+            <a href="https://www.linkedin.com/in/jasonfarthing/" ; target="blank">
+                <img id="linkedin" src="../jasonfarthing.github.io/assets/images/linkedinlogo.jpg" alt="linked in logo">
+            </a>
+            <a href="https://stackoverflow.com/users/8760150/jasonfarthing" ; target="blank">
+                <img id="stack" src="../jasonfarthing.github.io/assets/images/stackoverflowlogo.jpg" alt="stack overflow logo">
+            </a>
+        </div>
     </div>
 
 
 
     <div class="pagefooter">
-        <p id="contact-info">Contact information:
+        <p id="contact-info">Contact email:
             <a href="mailto:jasonfarthingisnow@gmail.com">jasonfarthingisnow@gmail.com</a>
         </p>
     </div>
