final changes portfolio img and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,15 +27,15 @@
 
         <h2 id="about-text">Check out some of my stuff...</h2>
         <div class="row">
-            <div class="column">
-                <img src="/w3images/wedding.jpg" style="width:100%">
-                <img src="/w3images/nature.jpg" style="width:100%">
+            <div class="column" class="column1">
+                <img src="../jasonfarthing.github.io/assets/images/sounboxguitars.jpg" style="width:100%">
+                <img src="../jasonfarthing.github.io/assets/images/nitetronic.jpg" style="width:100%">
 
 
             </div>
-            <div class="column">
-                <img src="/w3images/underwater.jpg" style="width:100%">
-                <img src="/w3images/rocks.jpg" style="width:100%">
+            <div class="column" class="column2">
+                <img src="../jasonfarthing.github.io/assets/images/planetsleaze.jpg" style="width:100%">
+                <img src="../jasonfarthing.github.io/assets/images/pazzos.jpg" style="width:100%">
             </div>
 
         </div>
